--- a/public/static/css/app.css
+++ b/public/static/css/app.css
@@ -10,3 +10,13 @@
 .bg-white {
     background-color: #FFF;
 }
+
+/* label focus color */
+.input-field input[type=text]:focus + label {
+    color: #000 !important;
+}
+/* label underline focus color */
+  .input-field input[type=text]:focus {
+    border-bottom: 1px solid #000 !important;
+    box-shadow: 0 1px 0 0 #000 !important;
+  }
