--- a/public/static/css/app.css
+++ b/public/static/css/app.css
@@ -20,3 +20,20 @@
     border-bottom: 1px solid #000 !important;
     box-shadow: 0 1px 0 0 #000 !important;
   }
+
+  p.error-data{
+      position: fixed;
+      top: 10px;
+      left: 10px;
+      padding: 1rem !important;
+      text-align: center;
+      color:white;
+      margin-top: 2rem;
+  }
+
+  .error{
+      padding: 1rem;
+      text-align: center;
+      margin-top: -15px;
+      color: white;
+  }
