--- a/public/static/css/app.css
+++ b/public/static/css/app.css
@@ -1,7 +1,7 @@
 .title{
     text-align: center;
-    margin-top: 60px !important;
-    margin-bottom: 30px !important;
+    margin-top: 6rem !important;
+    margin-bottom: 40px !important;
 }
 
 .text-center{
@@ -10,4 +10,19 @@
 
 .border{
     border: 1px solid black;
+}
+
+.links{
+    color: #ffffff;
+    padding: 0 0.5rem;
+    text-decoration: none;
+}
+
+.text-white{
+    color: #ffffff !important;
+}
+
+.my{
+    margin-top: 2rem !important;
+    margin-bottom: 2rem !important;
 }
