--- a/public/static/css/app.css
+++ b/public/static/css/app.css
@@ -1,141 +1,201 @@
-.title{
-    text-align: center;
-    margin-top: 5rem !important;
-    margin-bottom: 40px !important;
+.title {
+  text-align: center;
+  margin-top: 5rem !important;
+  margin-bottom: 40px !important;
 }
 
-.text-center{
-    text-align: center;
+.text-center {
+  text-align: center;
 }
 
-.border{
-    border: 1px solid black;
+.border {
+  border: 1px solid black;
 }
 
-.links{
-    color: #ffffff;
-    padding: 0 0.5rem;
-    text-decoration: none;
+.links {
+  color: #ffffff;
+  padding: 0 0.5rem;
+  text-decoration: none;
 }
 
-.text-white{
-    color: #ffffff !important;
+.text-white {
+  color: #ffffff !important;
 }
 
-.my{
-    margin-top: 2rem !important;
-    margin-bottom: 2rem !important;
+.my {
+  margin-top: 2rem !important;
+  margin-bottom: 2rem !important;
 }
 
-.mx{
-    margin-left: 1.5rem !important;
-    margin-right: 1.5rem !important;
+.mx {
+  margin-left: 1.5rem !important;
+  margin-right: 1.5rem !important;
 }
 
-@media(min-width:786px){
-    .mx{
-        margin-left: .5rem !important;
-        margin-right: .5rem !important;
-    }
+.py{
+  padding: 1rem 0 !important;
 }
 
-.m-auto{
-    margin: 0 auto !important;
+@media(min-width:786px) {
+  .mx {
+    margin-left: .5rem !important;
+    margin-right: .5rem !important;
+  }
 }
 
-.d-flex{
-    display: flex;
-    flex-direction: row;
+.m-auto {
+  margin: 0 auto !important;
 }
 
-.flex-grow{
-    flex-grow: 1;
-    padding: 2rem 0;
+.d-flex {
+  display: flex;
+  flex-direction: row;
 }
 
-.justify-between{
-    justify-content: space-around;
+.flex-grow {
+  flex-grow: 1;
+  padding: 2rem 0;
 }
 
-.justify-center{
-    justify-content: center;
+.justify-between {
+  justify-content: space-around;
 }
 
-.w-25{
-    width: 25% !important;
+.justify-center {
+  justify-content: center;
 }
 
-.link-back{
-    text-decoration: none;
-    font-size: 1.4rem;
-    color: #EF8A23;
+.w-25 {
+  width: 25% !important;
+}
+
+.link-back {
+  text-decoration: none;
+  font-size: 1.4rem;
+  color: #EF8A23;
+}
+
+
+.card{
+  padding: 3rem 0;
 }
 
 /*-- Spinner -- */
 
 .sk-chase {
-    width: 40px;
-    height: 40px;
-    margin: 1rem auto;
-    position: relative;
-    animation: sk-chase 2.5s infinite linear both;
+  width: 40px;
+  height: 40px;
+  margin: 1rem auto;
+  position: relative;
+  animation: sk-chase 2.5s infinite linear both;
+}
+
+.sk-chase-dot {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  animation: sk-chase-dot 2.0s infinite ease-in-out both;
+}
+
+.sk-chase-dot:before {
+  content: '';
+  display: block;
+  width: 25%;
+  height: 25%;
+  background-color: rgb(122, 110, 110);
+  border-radius: 100%;
+  animation: sk-chase-dot-before 2.0s infinite ease-in-out both;
+}
+
+.sk-chase-dot:nth-child(1) {
+  animation-delay: -1.1s;
+}
+
+.sk-chase-dot:nth-child(2) {
+  animation-delay: -1.0s;
+}
+
+.sk-chase-dot:nth-child(3) {
+  animation-delay: -0.9s;
+}
+
+.sk-chase-dot:nth-child(4) {
+  animation-delay: -0.8s;
+}
+
+.sk-chase-dot:nth-child(5) {
+  animation-delay: -0.7s;
+}
+
+.sk-chase-dot:nth-child(6) {
+  animation-delay: -0.6s;
+}
+
+.sk-chase-dot:nth-child(1):before {
+  animation-delay: -1.1s;
+}
+
+.sk-chase-dot:nth-child(2):before {
+  animation-delay: -1.0s;
+}
+
+.sk-chase-dot:nth-child(3):before {
+  animation-delay: -0.9s;
+}
+
+.sk-chase-dot:nth-child(4):before {
+  animation-delay: -0.8s;
+}
+
+.sk-chase-dot:nth-child(5):before {
+  animation-delay: -0.7s;
+}
+
+.sk-chase-dot:nth-child(6):before {
+  animation-delay: -0.6s;
+}
+
+@keyframes sk-chase {
+  100% {
+    transform: rotate(360deg);
   }
-  
-  .sk-chase-dot {
-    width: 100%;
-    height: 100%;
-    position: absolute; 
-    animation: sk-chase-dot 2.0s infinite ease-in-out both; 
+}
+
+@keyframes sk-chase-dot {
+
+  80%,
+  100% {
+    transform: rotate(360deg);
   }
-  
-  .sk-chase-dot:before {
-    content: '';
-    display: block;
-    width: 25%;
-    height: 25%;
-    background-color: rgb(122, 110, 110);
-    border-radius: 100%;
-    animation: sk-chase-dot-before 2.0s infinite ease-in-out both; 
-  }
-  
-  .sk-chase-dot:nth-child(1) { animation-delay: -1.1s; }
-  .sk-chase-dot:nth-child(2) { animation-delay: -1.0s; }
-  .sk-chase-dot:nth-child(3) { animation-delay: -0.9s; }
-  .sk-chase-dot:nth-child(4) { animation-delay: -0.8s; }
-  .sk-chase-dot:nth-child(5) { animation-delay: -0.7s; }
-  .sk-chase-dot:nth-child(6) { animation-delay: -0.6s; }
-  .sk-chase-dot:nth-child(1):before { animation-delay: -1.1s; }
-  .sk-chase-dot:nth-child(2):before { animation-delay: -1.0s; }
-  .sk-chase-dot:nth-child(3):before { animation-delay: -0.9s; }
-  .sk-chase-dot:nth-child(4):before { animation-delay: -0.8s; }
-  .sk-chase-dot:nth-child(5):before { animation-delay: -0.7s; }
-  .sk-chase-dot:nth-child(6):before { animation-delay: -0.6s; }
-  
-  @keyframes sk-chase {
-    100% { transform: rotate(360deg); } 
-  }
-  
-  @keyframes sk-chase-dot {
-    80%, 100% { transform: rotate(360deg); } 
-  }
-  
-  @keyframes sk-chase-dot-before {
-    50% {
-      transform: scale(0.4); 
-    } 100%, 0% {
-      transform: scale(1.0); 
-    } 
+}
+
+@keyframes sk-chase-dot-before {
+  50% {
+    transform: scale(0.4);
   }
 
-
-  /*  Alert danger   */
-  .alert-danger{
-      background-color: indianred;
-      color: #ffffff;
-      text-align: center;
-      padding: 1rem 0;
+  100%,
+  0% {
+    transform: scale(1.0);
   }
+}
 
-  .input-count{
-      width: 40px !important;
-  }
+
+/*  Alert danger   */
+.alert-danger {
+  background-color: indianred;
+  color: #ffffff;
+  text-align: center;
+  padding: 1rem 0;
+}
+
+.input-count {
+  width: 40px !important;
+}
+
+.imgProduct{
+  width: 100%;
+  height: 200px;
+}
+
+
