--- a/public/static/css/app.css
+++ b/public/static/css/app.css
@@ -191,7 +191,9 @@
 
 .imgProduct{
   width: 100%;
-  height: 200px;
+  max-width: 250px;
+  height: 100%;
+  max-height: 250px;
 }
 
 .MuiDrawer-paperAnchorDockedLeft{
