--- a/public/static/css/styles.css
+++ b/public/static/css/styles.css
@@ -20,13 +20,14 @@ html{
 *,*::before,*::after{
   box-sizing: inherit;
   margin: 0;
+  padding: 0;
   font-family: var(--fontRoboto);
 }
 
 body{
   font-size: 62.5%;
   overflow-x: hidden;
-  background-color: #ffffff;
+  background-color: white !important;
 }
 
 div.overlay{
@@ -64,6 +65,12 @@ section h2{
  font-weight: 400;
 }
 
+@media(min-width:768px){
+  section h2{
+      font-size: 2.2rem;
+  }
+}
+
 .container{
   width: 90%;
   margin: 0 auto;
@@ -99,307 +106,23 @@ iframe{
 
 /* Div contact styles */
 
-div.info-contact{
-  background-color: var(--gray);
-  padding: 1rem 0;
-  width: 100%;
-  margin: 0 auto;
+.title{
+  flex-grow: 1;
 }
 
-div.info-contact iframe{
-  margin-right: 5px;
-}
-
-div.container-info-contact{
-  width: 90%;
-  margin: 0 auto;
-}
-
-@media(min-width:768px){
-  div.container-info-contact{
-      width: 100%;
-      padding: 0 1rem;
-  }
-}
-
-
-
-ul.list-contact{
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  color: var(--grayDark);
-
-}
-
-ul.list-contact li{
-  flex-basis: 50%;
-  font-size: .7rem;
+.item-menu{
   display: flex;
   align-items: center;
-}
-
-@media(min-width:768px){
-  ul.list-contact{
-      justify-content: flex-start;
-  }
-
-  ul.list-contact li{
-      flex-basis: 0;
-  }
-
-  ul.list-contact li:last-of-type{
-      margin-left: 15px;
-  }
-  
-}
-
-/* Header styles */
-
-.site-header{
-  width: 100%;
-  background-color: black;
-  z-index: 1;  
-}
-
-@media(min-width:768px){
-  .site-header{
-      height: 50px;
-      padding: 0;
-      position: fixed;
-  }
-}
-
-.navbar{
-  height: 100%;
-  display: grid;
-  grid-template-columns: 10% 70% 10% 10%;
- 
-}
-
-@media(min-width:768px){
-  .navbar{
-      max-height:50px;
-      display:flex;
-      align-items: center;
-  }
-}
-
-/* car y looker */
-.c-logo{
-  display: flex;
-  align-items: center;
-  padding-left: 1rem;
-}
-
-.c-logo img{
-  height:40px;
-  width: 90px;
-}
-
-.c-car , .c-user{
-  display: flex;
-  align-items: center !important;
   justify-content: center;
+  padding: .5rem 1rem;
 }
-
-.c-car img , .c-user img{
-  height: 15px;
-  width: 15px;
-}
-
-@media(min-width:768px){
-
-
-  .c-logo{
-      order: 1;
-      flex-basis: 10%;
-  }
- 
-  .c-car{
-      order: 3;
-      flex-basis: 3%;
-  }
-
-  .c-user{
-      order: 4;
-      flex-basis: 3%;
-  }
-
-  .main-menu{
-      order: 2;
-      flex-basis: 80%;
-      display: flex;
-      justify-content: flex-start;
-  }
-}
-
-
-.menu-zone{
-  margin: 1rem auto;
-  padding: 0;
-  flex-basis: 25%;
-  display: flex;
-  align-items: center;
-}
-
-
-
-
-.menu-zone .btn-span{
-  position: relative;
-  width: 25px;
-  height: 25px;
-}
-
-.menu-zone button{
-  position: absolute;
-  height: 25px;
-  z-index: 1;
-  width: 25px;
-  border: none;
-  background: transparent;
-}
-
-div.menu-movil{
-  width: 20px;
-  height: 20px;
-}
-
-div.menu-movil img{
-  width: 100%;
-  height: 100%;
-}
-
-div.menu-movil:hover{
-  cursor: pointer;
-}
-
-div.menu-movil span{
-  background-color:#ffffff;
-  width: 100%;
-  margin: auto;
-  height: 3px;
-  display: block;
-  margin-bottom: 5px;
-}
-
-@media(min-width:768px){
-  div.menu-zone{
-      display: none;
-  }
-}
-
-
-.menu-zone p{
-  font-size: 1rem;
-  margin-left: .3rem;
-  color: #ffffff;
-}
-
-
-.main-menu{
-  position: fixed;
-  top: 0;
-  left: 0;
-  min-height: 100vh;
-  display: none;
-  width: 75%;
-  background-color: var(--gray);
-  color: var(--dark2);
-  padding: 0;
-  margin: 0;
-  z-index: 1000;
-  transition: all .1s ease-in;
-}
-
-.hide{
-  left: -100%;
-}
-
-.show{
-  display: block;
-}
-
-.menu-list{
-  padding: .7rem 0;
-  opacity: .8;
-  width: 100%;
-  text-align: center;
-  font-size: 1rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.menu-list a{
-  color: var(--dark);
-  font-size: 1rem;
-  width: 100%;
-  padding: 1rem 0;
-  
-}
-
-.menu-list div{
-  align-self: flex-end;
-  margin-top: 5px;
-  margin-right: 5px;
-  position: relative;
-}
-
-.menu-list div button{
-  position: absolute;
-  border: none;
-  width: 30px;
-  height: 30px;
-  background: transparent;
-}
-
-.menu-list iframe{
-  width: 30px;
-  height: 30px;
-}
-
-@media(min-width:768px){
-
-  .main-menu{
-      background-color: inherit;
-      position: static;
-      display: block;
-      min-height: 0;
-  }
-
-  .main-menu ul div{
-      display: none;
-  }
-
-  .menu-list{
-      flex-direction: row;
-      height: 100%;
-      align-items: center;
-      justify-content: flex-start;
-  }
-
-  .menu-list a{
-      color: #ffffff;
-      font-size: .95rem;
-      margin: 0;
-      text-transform: uppercase;
-      flex-basis: 10%;
-  }
-
-  .menu-list a:hover{
-     color: rgb(158,73,177);
-  }
-
-}
-
 
 
 /*  hero banner */ 
 
 .hero{
   position: relative;
+  margin-top: 57px;
   min-height: 80vh;
   display: flex;
   flex-direction: column;
@@ -548,6 +271,7 @@ section.categories{
 
 /* Recomendados */
 
+
 @media(min-width:768px){
   .card-parent{
       display: grid;
@@ -620,9 +344,6 @@ section.container-card{
 
 @media(min-width:768px){
   .card{
-     
-      overflow: hidden;
-      max-height: 300px;
       position: relative;   
   }
 
@@ -725,22 +446,43 @@ section.container-card{
   line-height: 20px;
 }
 
+@media(min-width:768px){
+  .about{
+      padding: 2rem 1rem;
+  }
+}
+
 
 .wrapper{
   display: grid;
-  padding: .5rem 0;
+  padding: 1rem 0;
   background-color: #303030;
   color: #ffffff;
 }
 
 .desplegable-parent {
   position: relative;
+  padding: .8rem 0;
+  border-bottom: 1px solid #8c8c8c40;
 }
 
-.desplegable-parent .options{
-  position: absolute;
-  top: 75%;
-  display: none;
+.options{
+ display: none;
+}
+
+/* options */
+
+.show-options{
+ display: block;
+}
+
+.hide-options{
+ display: none;
+}
+
+.options li{
+  padding: .5rem 0 .5rem .5rem;
+  font-size: .7rem;
 }
 
 .desplegable-parent div:first-of-type {
@@ -768,50 +510,187 @@ section.container-card{
   height: 15px;
 }
 
+@media(min-width:768px){
+
+  .wrapper .container{
+      padding: 0 1rem;
+      display: grid;
+      grid-template-columns: repeat(4,1fr);
+  }
+
+  .desplegable-parent{
+      border-bottom: none;
+      padding-left: 2rem;
+  }
+
+  .desplegable-parent img{
+      display: none;
+  }
+
+  .desplegable-parent .options{
+    display: block;
+    margin-top: 1rem !important;
+}
+
+.options li{
+    padding: 1rem 0 .5rem 0;
+    color: gray;
+    font-size:.9rem;
+}
+
+.title-menu-footer{
+    font-size: 1rem !important;
+}
+}
 
 
 /* footer */
 
 .footer{
-  background-color: #222222;
-  color: #ffffff;
-  padding: 1.2rem 0 .5rem 0;
+background-color: #222222;
+color: #ffffff;
+padding: 1rem 0 1rem 0;
+}
+
+.footer .c-logo-footer img{
+width: 90px;
+height: 40px;
 }
 
 .footer .copy{
-  padding: 1rem 0;
-  color: #F5F5F5;
+padding: 1rem;
+color: #F5F5F5;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
 }
 
 .copy p{
-  font-size: .8rem;
+font-size: .8rem;
+padding: 1rem 0;
 }
 
-.footer .c-logo{
-  display: flex;
-  justify-content: center;
-  padding: .7rem 0;
-}
 .credit-card {
-  padding: 1rem 0;
+padding: 1rem 0;
 }
 .credit-card img{
-  max-width: 100%;
+max-width: 100%;
 }
 
-/* options */
+@media(min-width:768px){
+.footer{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 1rem;
+}
+
+}
 
 
+/* -------------------- LOGIN -------------------------  */
 
-.showOptions{
+.ctn-frm{
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.ctn-frm form{
+  display: flex;
   height: 100%;
+  flex-direction: column;
+  border:  1px solid #e9e7e7;
+  padding: 2rem 1rem;
 }
 
-.hideOptions{
-  height: 0;
+.ctn-frm .title-form{
+  color: rgb(158,73,177);
+  text-transform: uppercase;
+  text-align: center;
+  padding: 1rem;
 }
 
-.options li{
-  padding: .5rem 0 .5rem .5rem;
-  font-size: .7rem;
+.ctn-frm .campo{
+  padding: 1.2rem;
+  display: grid;
+  grid-template-columns: 1fr;
+  column-gap: 1rem;
+}
+
+.ctn-frm .campo .error{
+  margin: .5rem 0;
+  background-color: #eb5e45;
+  color: #ffffff;
+  padding: .6rem;
+}
+
+.ctn-frm input{
+  background-color:#f7f8fa;
+  padding: .6rem;
+  border: 1px solid #dbd6d640;
+  border-radius: 5px;
+  color: var(--gray);
+  margin-top: .3rem;
+}
+
+.ctn-frm button{
+  padding: .6rem;
+  color: rgb(158,73,177);
+  background-color: transparent;
+  border: 1px solid rgb(158,73,177);
+}
+
+.ctn-frm .ctn-register{
+  display: none;
+}
+
+@media(min-width:768px){
+
+
+  .ctn-frm{
+    width: 95%;
+    margin: 0 auto;
+  }
+
+  .ctn-register, .ctn-frm form{
+    flex-basis: 50%;
+    margin: 0 2rem;
+  }
+
+  .ctn-frm .ctn-register{
+    display: flex;
+    flex-direction: column;
+    border:  1px solid #e9e7e7;
+    height: 100%;
+    padding: 3.5rem;
+  }
+
+  .title-form{
+    text-align: left !important;
+    font-size: 2rem;
+    color: black !important;
+  }
+
+  .ctn-register ul{
+    padding: .5rem 2rem !important;
+    list-style-type: circle;
+    color: #777;
+  }
+
+  .ctn-register p{
+    padding: 1rem;
+  }
+
+  .ctn-register ul li{
+    padding: .5rem 0;
+  }
+
+  .btnToRegister{
+    color: rgb(158,73,177);
+    padding: 1rem;
+  }
+
 }
